# donkey-lang

./: .gitignore  Cargo.toml  Donkey VM.md  Freyr VM.md  Pony VM.md  README.md  asm_example.py  example copy 2.py  example copy 3.py  example copy.py  example.py  example_2.dk  example_rec.py  example_simple.py  fib.py  fibonacci.py  last_compiled.asm  mirblocks.py  out  output.txt  testprogram.pasm  testprogram.s  typecheck.py
.cargo/: config.toml
src/: debug.rs  interner.rs  main.rs  typing_hm.rs
src/ast/: ast_printer.rs  lexer.rs  mod.rs  parser.rs
src/commons/: float.rs  mod.rs
src/compiler/: donkey_backend.rs  freyr_gen.rs  layouts.rs  mod.rs
src/donkey_vm/: encoder.rs
src/freyr/: asm.rs  encoder.rs  mod.rs
src/lambda_vm/: lambda_compiler.rs  lambda_runner.rs  mod.rs
src/llvm/: linker.rs  llvm_backend copy.rs  llvm_backend.rs  mod.rs
src/semantic/: MIR Rewrite.md  Monomorphization.md  New Type Inference Algorithm.md  Resolving type parameters.md  Type System.md  analysis.rs  check_declared_variables.rs  compiler_errors.rs  context.rs  example.txt  first_assignments.rs  hir.rs  hir_printer.rs  hir_test.rs  hir_type_resolution.rs  info_extract.rs  instantiate_types.rs  mir.rs  mir_printer.rs  mir_test.rs  mod.rs  monomorph.rs  name_registry.rs  struct_instantiations.rs  top_level_decls.rs  type_checker.rs  type_checker_hir.rs  (+10 more)
stdlib/: array.dk  asserts.dk  c_lib.dk  list.dk  llvm_intrinsics.dk  range.dk  str_impl.dk  str_type.dk  type_type.dk
tests/: 0001_declare_var_and_print.dk  0002_recursive_fib.dk  0003_create_struct_and_printf_properties.dk
(+21 files in other folders)
