[package]
name = "donkey-lang"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.4.0"
match_deref = "0.1.1"

quickcheck = "1"
quickcheck_macros = "1"

[profile.dev]
opt-level = 0
