[package]
name = "donkey-lang"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.7.1", features = ["llvm21-1"] }
paste = "1.0.15"

[dev-dependencies]
pretty_assertions = "1.4.0"
match_deref = "0.1.1"
quickcheck = "1"
quickcheck_macros = "1"

[profile.dev]
opt-level = 0
